# Redes-3ero-Estudios

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ISSUES_COMPLETOS.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  workflow.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  ejercicio.md  modulo.md
docs/: 00_indice_general.md  ISSUES_ADICIONALES_CRITICOS.md  ISSUES_COMPLETOS.md  index.md  roadmap.md
docs/examenes/: README.md
docs/modulos/: README.md
